--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@types/jquery": "^3.5.5",
     "@types/node": "14.14.20",
-    "@webgpu/types": "0.0.46",
+    "@webgpu/types": "^0.1.2",
     "css-loader": "^5.2.0",
     "jquery": "^3.6.0",
     "jshint": "^2.12.0",
